<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/nav_store"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Add"
            android:icon="@mipmap/addbook"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_delivery"
            android:icon="@mipmap/nav_delivery"
            android:title="@string/menu_slideshow" />

    </group>
    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/nav_logout"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>
